--- a/cards.html
+++ b/cards.html
@@ -5,10 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Queries</title>
     <style>
-        
+
     </style>
 </head>
 <body>
-    
+  <div class=" container ">
+      <div class="item">
+        <img  class=" image" src="sitaraman.jpeg" />
+        <p class="text"><b>1.Sita Ramam</b></p>
+        <p class="MovieCreator">Directed by:Hanu Raghavapudi</p>
+        <p class="MovieCreator">Produced by:C.Aswanti Dutt</p>
+        <p class="MovieCreator">Screenplay by:Hanu Raghavapudi,Rutham Kandamudo</p>  
+        <p class="MovieCreator">Cinematography:P. S. Vinod,Shreyaas Krishna</p>
+      </div> 
+      <div class="item">
+        <img  class=" image" src="12th fail.jpeg" />
+        <p class="text"><b>2.12th Fail</b></p>
+        <p class="MovieCreator">Directed by:Vidhu Vinod Chopra</p>
+        <p class="MovieCreator">Produced by:Vidhu Vinod Chopra,Yogesh Ishwar</p>
+        <p class="MovieCreator">Narrated by:Anant V Joshi</p> 
+        <p class="MovieCreator">Cinematography:Randarajan Ramabadran</p> 
+      </div>
+      <div class="item">
+        <img  class=" image" src="chhichore.webp" />
+        <p class="text"><b>3.Chhichhore</b></p>
+        <p class="MovieCreator">Directed by:Nitesh Tiwari</p>
+        <p class="MovieCreator">Produced by: Sajid Nadiadwala </p>
+        <p class="MovieCreator">Written by:	Nitesh Tiwari,Piyush Gupta,
+            Nikhil Mehrotra</p>  
+         <p class="MovieCreator">Cinematography:Amalendu Chaudhary</p>   
+      </div></div>  
 </body>
 </html>
