--- a/cards.html
+++ b/cards.html
@@ -5,7 +5,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Queries</title>
     <style>
-
+ body{
+        background-color: #AD88C6;
+      }
+      .container{
+        height:500px;
+        border:5px solid rgb(21, 112, 135);
+        padding: 5px;
+        display: flex;
+        flex-wrap: wrap;
+        border-radius: 3px;
+        margin-bottom: 2px;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items:start;
+       }
+        .item {
+        height: 450px;
+        width: 400px;
+        background-color:#E7BCDE ;
+        border-radius: 10px;
+        margin: 5px;
+        font-size: 50px;
+        padding: 10px;
+      }
+      .image{
+        height:200px;
+        width:360px;
+        border-radius: 2px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+      }
+      .text{
+        font-size:40px;
+         text-align: center;
+         font-family: cursive;
+         font-style: italic;
+         position: relative;
+         font-weight: 900px;
+         bottom: 25px;
+         color: navy;
+      }
+      .MovieCreator{
+        font-size:15px;
+          font-family: Verdana, Geneva, Tahoma, sans-serif;
+         color: rgb(130, 8, 92);
+         position: relative;
+        bottom: 40px;
+      }
     </style>
 </head>
 <body>
